# quickmaths

./: .gitignore  README.md  classic_index.html  index.html  quickmaths_scripts.js  quickmaths_styles.css  quickmaths_telegram_bot.py
advanced/: advanced_index.html  advanced_scripts.js
binary/: binary_index.html  binary_scripts.js  binary_styles.css
classic/: classic_index.html  classic_scripts.js  classic_styles.css
expert/: expert_index.html  expert_scripts.js
mini/: mini_index.html  mini_scripts.js  mini_styles.css
servers/python/: quickmaths_telegram_bot.py
servers/rust/: Cargo.toml
servers/rust/src/: main.rs
