[package]
name = "quickmaths_telegram_bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
rayon = "1.8"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
url = { version = "2", features = ["serde"] }
google-sheets4 = "*"
serde = "^1.0"
serde_json = "^1.0"
